ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-springboot-demo-ing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    #ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: '/$1'
spec:
  rules:
  - http:
      paths:
      - path: /lukaszro/(.+)
        backend:
          serviceName: rest-springboot-demo-svc
          servicePort: 8088
