springboot-demo-k8s-gke.yml
#
# Copyright (c) 2017 Oracle and/or its affiliates. All rights reserved.
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rest-springboot-demo
  labels:
    run: rest-springboot-demo
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: rest-springboot-demo
    spec:
      containers:
      - image: eu.gcr.io/local-terminus-196209/springboot-demo
        imagePullPolicy: Always
        name: rest-springboot-demo
        ports:
        - containerPort: 8080
          protocol: TCP
      imagePullSecrets:
      - name: wrelease
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rest-springboot-demo-svc
spec:
  selector:
    run: rest-springboot-demo
  ports:
    - port: 8088
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-springboot-demo-ing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/add-base-url: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /lukaszro/
        backend:
          serviceName: rest-springboot-demo-svc
          servicePort: 8088
